tests/negative/typecheck/addr-val.orng
fn main() -> Int
    let x = 0
    let y: &Char = &x
    0